--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Digitalā Pastkarte</h1>
+        <h1>Rūjienas Vidusskola</h1>
         <div class="postcard">
             <textarea id="message" placeholder="Ieraksti savu novēlējumu"></textarea>
             <button onclick="generatePostcard()">Ģenerēt pastkarti</button>
             <img id="postcardImage" alt="Pastkartes attēls">
+            <a id="downloadLink" download="pastkarte.png" style="display: none;">Lejupielādēt pastkarti</a>
         </div>
     </div>
     <script src="script.js"></script>
